# ImageClassificationService

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  environment.yml  fly.toml  pyproject.toml
InfinityVision/: manage.py
InfinityVision/InfinityVision/: asgi.py  settings.py  urls.py  views.py  wsgi.py
InfinityVision/InfinityVision/templates/InfinityVision/: about.html  base.html  contact.html  facts.html  index.html
InfinityVision/chat/: training.py  urls.py  views.py
InfinityVision/chat/templates/chat_ai/: chat.html
InfinityVision/faiss_index/: faiss_index_file.index  load_faiss_index.py
InfinityVision/image_process/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
InfinityVision/image_process/migrations/: 0001_initial.py  0002_image_predicted_class.py
InfinityVision/image_process/templates/image_process/: classification_result.html  edit_image.html  edit_image_name.html  my_images.html  upload_image.html  upload_success.html
InfinityVision/models/: model_3_finetuned.h5
InfinityVision/pdf_process/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
InfinityVision/pdf_process/migrations/: 0001_initial.py  0002_alter_pdfdocument_file.py
InfinityVision/pdf_process/templates/pdf_process/: edit_document.html  edit_document_name.html  my_documents.html  my_pdfs.html  upload_document.html  upload_pdf.html  upload_success.html
InfinityVision/static/css/: center.css  main.css  pasres.css
InfinityVision/staticfiles/css/: main.css  reg.css
InfinityVision/users/: forms.py  urls.py  views.py
(+11 files in other folders)
